# finance-calc-mcp

./: .gitignore  README.md  finance_calc_mcp_fixes.md  pyproject.toml
src/finance_calc_mcp/: __init__.py  server.py
